fixed redbubble alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1001,7 +1001,7 @@ label {
 	}
 	.redbubble {
 		width: auto;
-		height: 90%;
+		height: 60%;
 	}
 }
 
